[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bulkpublish"
version = "0.1.0"
description = "Social media automation API for AI agents, LLMs, and developers. Publish to 11 platforms programmatically."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "BulkPublish", email = "support@bulkpublish.com" }]
keywords = [
    "bulkpublish", "social-media", "api", "sdk", "publishing", "scheduling",
    "automation", "ai-agent", "llm", "mcp", "agentic", "tool-use",
    "facebook", "instagram", "twitter", "tiktok", "linkedin", "youtube",
    "threads", "bluesky", "pinterest", "mastodon",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.24.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "respx>=0.20"]

[project.urls]
Homepage = "https://github.com/azeemkafridi/bulkpublish-api"
Documentation = "https://bulkpublish.com/docs/api"
Repository = "https://github.com/azeemkafridi/bulkpublish-api"
Issues = "https://github.com/azeemkafridi/bulkpublish-api/issues"

[tool.hatch.build.targets.wheel]
packages = ["bulkpublish"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
